[gd_scene load_steps=6 format=3 uid="uid://d2mp0kj78daub"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_mpfrs"]
[ext_resource type="PackedScene" uid="uid://bxcosvmfin7xb" path="res://scenes/speech_recognizer_demo.tscn" id="2_rgxpi"]
[ext_resource type="Script" path="res://scripts/canvas.gd" id="2_sfvpx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2rla5"]
bg_color = Color(0.270588, 0.447059, 0.87451, 0.768627)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.427451, 0.137255, 0.192157, 1)
border_blend = true
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e7jti"]
bg_color = Color(0.427451, 0.588235, 0.945098, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
expand_margin_top = 4.0

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_mpfrs")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
visible = false
layout_mode = 2
color = Color(0.211765, 1, 1, 1)

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_selected_color = Color(0.737255, 1, 1, 1)
theme_override_colors/font_unselected_color = Color(1, 1, 1, 1)
theme_override_colors/drop_mark_color = Color(0.972549, 0, 0, 1)
theme_override_font_sizes/font_size = 72
theme_override_styles/panel = SubResource("StyleBoxFlat_2rla5")
theme_override_styles/tabbar_background = SubResource("StyleBoxFlat_e7jti")
tab_alignment = 1
current_tab = 1

[node name="Spells" type="TabBar" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/TabContainer/Spells"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "The Spells Button"

[node name="Voice" type="TabBar" parent="MarginContainer/TabContainer"]
layout_mode = 2

[node name="Control" parent="MarginContainer/TabContainer/Voice" instance=ExtResource("2_rgxpi")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.996993, 0.895765)

[node name="Other" type="TabBar" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_sfvpx")

[node name="ColorRect" type="ColorRect" parent="MarginContainer/TabContainer/Other"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.83
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Other"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.444
anchor_right = 1.0
anchor_bottom = 0.548
offset_left = -1.0
offset_top = 201.9
offset_right = -1.0
offset_bottom = 235.3
grow_horizontal = 2
grow_vertical = 2

[node name="Clear" type="Button" parent="MarginContainer/TabContainer/Other/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Clear"

[node name="Cast Spell" type="Button" parent="MarginContainer/TabContainer/Other/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Cast Spell"

[node name="Polygon2D" type="Polygon2D" parent="MarginContainer/TabContainer/Other"]
position = Vector2(497, 200)

[node name="Line2D" type="Line2D" parent="MarginContainer/TabContainer/Other/Polygon2D"]

[node name="AllSeeingEye" type="TabBar" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Follow" type="Button" parent="MarginContainer/TabContainer/AllSeeingEye"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -238.0
offset_bottom = 58.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 36
text = "Follow player"

[node name="Unfollow" type="Button" parent="MarginContainer/TabContainer/AllSeeingEye"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -29.0
offset_bottom = 29.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Stop Following
"

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/TabContainer/AllSeeingEye"]
position = Vector2(347, 265)
scale = Vector2(0.6, 0.6)

[connection signal="pressed" from="MarginContainer/TabContainer/Other/VBoxContainer/Clear" to="MarginContainer/TabContainer/Other" method="_on_clear_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/Other/VBoxContainer/Cast Spell" to="MarginContainer/TabContainer/Other" method="_on_cast_spell_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/AllSeeingEye/Follow" to="." method="_on_follow_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/AllSeeingEye/Unfollow" to="." method="_on_unfollow_pressed"]
